--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "taro_dva_cli",
   "version": "1.0.2",
-  "description": "taro_dava_cli命令行脚本工具",
+  "description": "taro_dva_cli命令行脚本工具",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
